# aitts

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
samples/: english-sonnet.txt  short.txt  ukrainian.txt
src/aitts/: cli.py  client.py  paths.py  say.py  synthesis.py
tests/: test_cli.py  test_say.py  test_split_text.py  test_synthesis.py
