[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aitts"
dynamic = ["version"]
description = "OpenAI-backed TTS CLIs: aitts (long-form → playlist) and aisay (short-form, like macOS `say`)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vlad Orlenko", email = "vlad@orlenko.ca" }]
keywords = ["tts", "text-to-speech", "openai", "cli", "macos", "audio", "say", "afplay"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]
dependencies = [
    "openai>=1.55",
    "python-dotenv>=1.0",
    "python-slugify>=8.0",
    "trafilatura>=2.0",
]

[project.urls]
Homepage = "https://github.com/orlenko/aitts"
Repository = "https://github.com/orlenko/aitts"
Issues = "https://github.com/orlenko/aitts/issues"
Changelog = "https://github.com/orlenko/aitts/blob/main/CHANGELOG.md"

[project.scripts]
aitts = "aitts.cli:main"
aisay = "aitts.say:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.hatch.version]
path = "src/aitts/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aitts"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/samples",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
